# gpt-researcher

./: .aider.ignore  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .hintrc  .mcp.json  .pre-commit-config.yaml  .python-version  .tool-versions  .windsurfrules  .zeaburignore  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_RULES.md  DEEP_RESEARCH_DIAGRAMS.md  Dockerfile  Dockerfile.Dev  Dockerfile.fullstack  Dockerfile.minimal  Dockerfile.zeabur  IMAGE_CREDENTIALS.md  IMAGE_GENERATION.md  IMPROVEMENTS_SUMMARY.md  ISSUE_BACKLOG.md  LICENSE  LLM_VISUALIZATION_README.md  LOGGING_IMPROVEMENTS.md  Layerfile  Makefile  OPENSEARCH_INTEGRATION_STRATEGY.md  PLAN.md  (+115 more)
.claude/: SKILL.md
.codex-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.swm/: ai-agent-researcher.xpijztkp.sw.md  swimm.json
.triage/: all_results.json  batch_1.json  batch_2.json  batch_3.json  batch_4.json  batch_5.json  batch_6.json  batch_7.json  build_backlog.jq  draft_comments_bucketB.md  engagement.graphql  issues_raw.json  ranked.json  render.jq  result_1.json  result_2.json  result_3.json  result_4.json  result_5.json  result_6.json  result_7.json  sorted.json
1A_DPO_Firecrawl_vs_HTML/: firecrawldownloaderResult_url1.md  firecrawldownloaderResult_url2.md  htmldownloaderResult.md  htmldownloaderResult_url1.md
1A_Experiment/: README.md  z_dpoFirecrawl.py  z_dpoHTML.py
1A_Firecrawl_scraped_content_results/: firecrawl_scraping_results_20250728_095842.md
1A_ScraperFirecrawl_ExpRes/: 1111aaaa.md  FLLM-4.1-mini_SLLM-4.1_STLLM-o1_Firecrawl.md  FLLM-4.1-mini_SLLM-4.1_STLLM-o3_Firecrawl.md  FLLM-4o-mini_SLLM-4.1_STLLM-o4-mini_BS.md
1A_Tone_ExpRes/: ToneInformative_depth2_breadth3.md
1A_md_ReportRes/: p0_d2_b3.md  p0_d2_b4.md  p0_d2_b5.md  p0_d3_b5.md
Wrapper/: readme.md  requirements.txt
actions/: web_scrape.py  web_search.py
agent/: llm_utils.py  prompts.py  rabbit.py  research_agent.py  research_assistant.py  run.py
application/: Dockerfile  next.config.mjs
backend/: Dockerfile  Procfile  RETRIEVER_CONFIG.md  TASK_CHARACTERISTICS.md  __init__.py  langgraph.json  requirements.txt  run_server.py  runtime.txt  server.py  utils.py  websocket_manager.py
blog/: archive.html  atom.xml  authors.html  building-gpt-researcher.html  building-openai-assistant.html  gpt-researcher-ag2.html  gptr-hybrid.html  gptr-langgraph.html  rss.xml  stepping-into-the-story.html  tags.html  welcome.html
client/: index.html  obsidian_template.md  scripts.js  styles.css
config/: __init__.py  config.py
configs/: my_custom_config.json  sample_config.json  uat_config.json
deep_agents/: BENCHMARK.md  README.md  SHARE_SUMMARY.md  __init__.py  agent.py  benchmark.py  breadth_benchmark.py  drb_generate.py  drb_harness.patch  hybrid_benchmark.py  main.py  recency_benchmark.py  report_benchmark.py  requirements.txt  task.json  tools.py
deep_research/: deep_research.py  main.py
deprecated_mcp/: Dockerfile  docker-compose.yml  server.py
dev-team/: __init__.py  agents.py  flow.py  tools.py
dev_team/: __init__.py  agents.py  flow.py  main.py  requirements.txt  run_flow.py
docs/: CNAME  README.md  api.md  contribute.html  deep-research-align-A.md  docusaurus.config.js  docusaurus.config.mjs  examples.html  faq.html  index.md  introduction.md  package.json  pydoc-markdown.yml  roadmap.html  sidebars.js  welcome.html
evals/: README.md
examples/: mcp_config.json  mcp_server_example.py  pip-run.ipynb  post_retrieval_processing_example.py  sample_report.py  use_mcp_with_gpt_researcher.py  use_tavily_mcp.py
frontend/: README.md  SHOWDOWN.md  history.html  index.html  package-lock.json  package.json  pdf_styles.css  scripts.js  styles.css
frontend_/: .eslintrc.json  Dockerfile  README.md  craco.config.js  next.config.json  next.config.mjs  package-lock.json  package.json  prettier.config.js  tailwind.config.ts  webpack.config.mjs
github_repo_index/: index.faiss  index.pkl
gpt_researcher/: Multi_Agent_CLI.py  README.md  __init__.py  agent.py  config.py  exceptions.py  gpt_researcher.py  prompts.py
gpt_researcher_master/: .dockerignore  Dockerfile  README-zh_CN.md  docker-compose.yml  main.py  setup.py
gpt_researcher_nextjs/: .gitignore
gpt_researcher_old/: agent.py
gptresearcher/: gpt_researcher.py
highlevel_instructions/: batch_researcher.py  complexity_analyzer.py  dual_curator.py
history/: Dockerfile-dev  Dockerfile-prod  package.json
js/: overlay.js
llm_fallbacks/: __main__.py  config.py  core.py  custom_providers.json  fallback_lists.py  filter_litellm.py  free_models.json  generate_configs.py  groq_model_cost.json  model_priority_orders.json
mcp-server/: .env.example  IMPROVEMENTS.md  INDEX.md  INSTALLATION_SUMMARY.md  MCP_SERVERS_README.md  README.md  README_NEW.md  REVIEW_SUMMARY.md  SETUP_GUIDE.md  USER_GUIDE_SOFIA.md  WINDOWS_SETUP.md  __init__.py  document_analysis_mcp.py  gpt_researcher_mcp_enhanced.py  mcp-requirements.txt  requirements.txt  run.sh  run_servers.sh  server.py  test_server.py  test_servers.py  utils.py
multi_agents/: README.md  __init__.py  agent.py  cliREADME.md  langgraph-sdk-test.py  langgraph_example.py  main.py  main_test.py  new.txt  package.json  requirements.txt  server.js  streamValues.js  task.json  test2.js
multi_agents_ag2/: README.md  main.py  requirements.txt
new_stack/: compile.ps1  compile.sh  config.json  server.py
nginx/: Dockerfile.dev  default.conf
ollama/: Modelfile.gemma4_obliterated
permchain_example/: README.md  research_team.py  researcher.py  test.py
processing/: text.py
prompts/: clinical_development.txt  competitive_landscape.txt  deal_landscape.txt  disease_overview.txt  epidemiology.txt  kols.txt  market_model.txt  target_product_profile.txt
react-frontend/: .gitignore  package-lock.json  package.json
redish_database/: redis_context.py
reports/: task_20250301_112047_What_are_the_latest_developments_in_renewable_ener.md  (+1 more)
scraping/: web_scrape.py
(+2776 files in other folders)
