[tool.poetry]
name = "gpt-researcher"
version = "0.8.5"
description = "GPT Researcher is an autonomous agent designed for comprehensive online research on a variety of tasks."
authors = ["Assaf Elovic <assaf.elovic@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Core dependencies
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
pydantic = "*"
python-multipart = "*"
jinja2 = "*"

# LLM and vector store integrations
langchain = "*"
langchain_community = "*"
langchain-openai = "*"
langchain-gigachat = "*"
openai = "*"
tiktoken = "*"
tavily-python = "*"

# Web scraping and information retrieval
beautifulsoup4 = "*"
requests = "*"
duckduckgo_search = "*"
arxiv = "*"
PyMuPDF = "*"

# Document processing
markdown = "*"
mistune = "*"
htmldocx = "*"
python-docx = "*"
lxml = { version = "*", extras = ["html_clean"] }
json-repair = "*"
json5 = "*"

# Utilities
loguru = "*"
colorama = "*"
aiofiles = "*"
tqdm = "*"
websockets = "*"
permchain = "*"
langgraph = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_fixture_loop_scope = "function"

[project]
name = "gpt-researcher"
version = "0.8.5"
description = "GPT Researcher is an autonomous agent designed for comprehensive online research on a variety of tasks."
authors = [{ name = "Assaf Elovic", email = "assaf.elovic@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core dependencies
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "python-multipart",
    "jinja2",

    # LLM and vector store integrations
    "langchain",
    "langchain_community",
    "langchain-openai",
    "langchain-gigachat",
    "openai",
    "tiktoken",
    "tavily-python",

    # Web scraping and information retrieval
    "beautifulsoup4",
    "requests",
    "duckduckgo_search",
    "arxiv",
    "PyMuPDF",

    # Document processing
    "markdown",
    "mistune",
    "htmldocx>=0.0.6",
    "python-docx",
    "lxml",
    "json-repair",
    "json5",

    # Utilities
    "loguru",
    "colorama",
    "aiofiles",
    "tqdm",
    "websockets",
    "permchain",
    "langgraph",
]
